# 2D-Simple-Game-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  ENGINE_DEVELOPMENT_SOURCE_OF_TRUTH.md  README.md  demo.game.json
assets/: animated_square.ppm  asset_manifest.json  editor_layout.ini  player.ppm  tiles.ppm
include/engine/: App.h  AssetManifest.h  AudioSystem.h  ComponentPool.h  DemoGame.h  DemoScene.h  ECS.h  Engine.h  Event.h  Game.h  GameConfig.h  GpuResourceManager.h  Grid.h  InputMap.h  JobSystem.h  Memory.h  OpenGLContext.h  PhysicsSystem.h  PluginSystem.h  Prefab.h  RenderCommandQueue.h  RenderGraph.h  RenderPacket.h  Renderer.h  ResourceManager.h  Scene.h  SceneSerializer.h  ScriptSystem.h
include/glad/: glad.h
samples/flappy_bird/: README.md  flappy_bird.game.json
samples/flappy_bird/src/: FlappyBirdGame.cpp
samples/snake/: README.md  snake.game.json
samples/snake/src/: SnakeGame.cpp
src/: App.cpp  AssetManifest.cpp  AudioSystem.cpp  DemoGame.cpp  DemoScene.cpp  Engine.cpp  Game.cpp  GameConfig.cpp  GpuResourceManager.cpp  InputMap.cpp  JobSystem.cpp  Memory.cpp  OpenGLContext.cpp  PhysicsSystem.cpp  PluginSystem.cpp  Prefab.cpp  RenderCommandQueue.cpp  RenderGraph.cpp  Renderer.cpp  ResourceManager.cpp  Scene.cpp  SceneSerializer.cpp  ScriptSystem.cpp  glad.c  main.cpp
templates/basic_game/: README.md  basic_game.game.json
templates/basic_game/src/: BasicGame.cpp
tests/: EngineCoreTests.cpp  PackageSmokeTests.ps1
tools/: package.ps1
